casbin-kubesphere/templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: casbin-webhook-svc
  labels:
    app: casbin-webhook-svc
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: casbin-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casbin-webhook
  labels:
    app: casbin-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: casbin-webhook
  template:
    metadata:
      labels:
        app: casbin-webhook
    spec:
      containers:
      - name: casbin-kubesphere
        image: casbin-kubesphere:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "webhook.domain.local"
webhooks:
- name: "webhook.domain.local"
  rules:
  - apiGroups:   [""]
    apiVersions: ["*"]
    operations:  ["*"]
    resources:   ["*"]
    scope:       "*"
  clientConfig:
    service:
      namespace: "default"
      name: "casbin-webhook-svc"
      path: /check
      port: 8080
    #url: "https://kubernetes.docker.internal:8080/check"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR3VENDQXFtZ0F3SUJBZ0lVRlJpWlc4dDNnODVPNmtOT2krTlREcWxqNmVVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2NERUxNQWtHQTFVRUJoTUNRMDR4RGpBTUJnTlZCQWdNQlVwSlRFbE9NUTR3REFZRFZRUUhEQVZLU1V4SgpUakVOTUFzR0ExVUVDZ3dFVkVWVFZERU5NQXNHQTFVRUN3d0VWRVZUVkRFak1DRUdBMVVFQXd3YWEzVmlaWEp1ClpYUmxjeTVrYjJOclpYSXVhVzUwWlhKdVlXd3dIaGNOTWpFd056STBNRFl6TmpJd1doY05Nakl3TnpJME1EWXoKTmpJd1dqQndNUXN3Q1FZRFZRUUdFd0pEVGpFT01Bd0dBMVVFQ0F3RlNrbE1TVTR4RGpBTUJnTlZCQWNNQlVwSgpURWxPTVEwd0N3WU [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "webhook.domain.local2"
webhooks:
- name: "webhook.domain.local2"
  rules:
  - operations: ["CREATE","DELETE"]
    apiGroups: ["apps"]
    apiVersions: ["v1"]
    resources: ["deployments"]
  clientConfig:
    service:
      namespace: "default"
      name: "casbin-webhook-svc"
      port: 8080
      path: /deployment
    #url: "https://kubernetes.docker.internal:8080/deployment"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR3VENDQXFtZ0F3SUJBZ0lVRlJpWlc4dDNnODVPNmtOT2krTlREcWxqNmVVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2NERUxNQWtHQTFVRUJoTUNRMDR4RGpBTUJnTlZCQWdNQlVwSlRFbE9NUTR3REFZRFZRUUhEQVZLU1V4SgpUakVOTUFzR0ExVUVDZ3dFVkVWVFZERU5NQXNHQTFVRUN3d0VWRVZUVkRFak1DRUdBMVVFQXd3YWEzVmlaWEp1ClpYUmxjeTVrYjJOclpYSXVhVzUwWlhKdVlXd3dIaGNOTWpFd056STBNRFl6TmpJd1doY05Nakl3TnpJME1EWXoKTmpJd1dqQndNUXN3Q1FZRFZRUUdFd0pEVGpFT01Bd0dBMVVFQ0F3RlNrbE1TVTR4RGpBTUJnTlZCQWNNQlVwSgpURWxPTVEwd0N3WU [...]
    
    

  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
